# juniper-policy-generator

./: README.md  app.py  pyproject.toml
examples/: chi-sales-sfdc.set  chi-sales-sfdc.yaml  dns-egress.yaml
juniper_policy_generator/: i18n.py  models.py  naming.py  renderer.py
juniper_policy_generator/templates/: index.html  policy.set.j2
poac/: naming.py  validator.py
poac/templates/: index.html  policy.set.j2
tests/: test_i18n.py  test_naming.py  test_renderer.py  test_validator.py
