[project]
name = "juniper-policy-generator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
